﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-02-07
	Fixed: Affinity ideal nor Log adjusts settings were not saved across restarts when set in UI.
### 2019-02-05
	Changed: Exclusive mode error handling.
	Changed: Power mode reporting clarified.
	Removed: Path and scanning debug options removed from UI.
### 2019-02-04 Version 0.13
	Added: Watchlist rule editing automatically fills in path when running process is selected, if no path is defined yet.
	Added: Process select dialog now can contain messages.
	Internal: Lots of changes. And version bump.
	Fixed: Year 2019 in changelog. Cut&paste bad, correct dating good. (reported by Chairkicker Nick)
	Fixed: Process&Foreground debug.

## [0.12...]
### 2019-02-03
	Changed: Power mode stuff, especially in relation to session unlock.
	Internal: Reducing monolithic nature of UI building. Should have no effect to end users.
### 2019-02-02
	Internal: Simplified things related process exit detection. Something may have broken.
	Removed: Batch processing support.
	Removed: WMI Queries option from Core.ini, it was not used.
	Removed: Lots of unused internal things.
	Changed: Unified more functionality. Re-using already known facts about running processes. Bugs are expected.
	Added: Retrieve old info when encountering same process again if available.
	Added: Ideal affinity and adjust logging added to watchlist rule editing.
	Changed: All messageboxes changed to use custom one to allow more context relevant positioning. Some things may be broken.
### 2019-02-01
	Internal: Simplified some things. Should have no visible effects to users.
### 2019-01-31
	Internal: Changes and added Adjust Delay debug option in Core.ini.
	Changed: Default affinity for TM itself to 0 (OS control) instead of just the last core.
		The previous setting was fine, but can result in TM appear to be functioning poorly.